fixed hero img width on mobile

--- a/styles/main30.css
+++ b/styles/main30.css
@@ -69,10 +69,10 @@ body {
 
   /* hero image to ignore page padding */
   .img-hero {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: -25px;
+    margin-right: -25px;
     margin-top: -40px;
-    width: calc(100% + 60px);
+    width: calc(100% + 50px);
   }
 
 }
